--- a/conda_envs/Dockerfile
+++ b/conda_envs/Dockerfile
@@ -2,8 +2,14 @@
 
 FROM continuumio/miniconda3:latest
 
-WORKDIR /env_files
-#COPY conda_files/embryo.yaml embryo.yaml
+ARG USER_ID
+ARG GROUP_ID
+RUN addgroup --gid $GROUP_ID toolman && \
+    adduser --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID toolman && \
+    adduser root toolman && \
+    chown -R root:toolman /opt/conda && \
+    chmod -R g-w /opt/conda && \
+    chmod -R g+rX /opt/conda
 COPY .condarc /root/.condarc
 RUN conda clean -i; \
     conda install -c conda-forge mamba
@@ -16,18 +22,22 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
 RUN mamba create -n lab jupyterlab
 # set embryo env
 RUN mamba create -n embryo -c conda-forge -c bioconda \
-    numpy pandas scikit-learn scipy umap-learn louvain numba \
+    numpy pandas scikit-learn scipy umap-learn louvain \
     h5py anndata pysam pybedtools pybigwig pyarrow loompy \
     scanpy scvelo cooler cooltools \
     matplotlib seaborn plotly \
     jupyter_client ipykernel ipywidgets python-kaleido
 RUN conda run -n embryo pip install opencv-python open3d
-RUN conda run -n embryo python -m ipykernel install --user --name=embryo --display-name="Python (embryo)"
-# start jupyter
-#SHELL ["conda", "run", "-n", "lab", "/bin/bash", "-c"]
-#RUN jupyter lab --port=6501 --no-browser
-
-#TODO: 
-# 1. fix numba bug
-# 2. adding non-priviliged user
-# 3. adding jupyterlab command and run in daemon mode
+RUN conda run -n embryo python -m ipykernel install --name=embryo --display-name="Python (embryo)"
+# configure jupyterlab
+RUN mamba install -n lab -c conda-forge nodejs=16
+RUN conda run -n lab jupyter labextension install jupyterlab-plotly
+COPY jupyter_entrypoint.sh /opt/conda/
+RUN chown toolman:toolman /opt/conda/jupyter_entrypoint.sh && \
+    chmod +x /opt/conda/jupyter_entrypoint.sh
+USER toolman
+WORKDIR /share/Data/ychi/notebook
+ENTRYPOINT ["/opt/conda/jupyter_entrypoint.sh"]
+# TODO:
+# 1. fix numba bug when import scanpy
+# 2. adding R packages
