--- a/eaglec/Dockerfile
+++ b/eaglec/Dockerfile
@@ -19,11 +19,12 @@ RUN conda config --add channels bioconda
 RUN conda config --add channels conda-forge
 RUN mamba install -n base scikit-learn statsmodels matplotlib cooler pyBigWig pyensembl python=3.8 joblib=1.0.1 tensorflow=2 cython=0.29.24
 RUN conda run -n base --live-stream pip install -U eaglec -i https://mirrors.pku.edu.cn/pypi/web/simple
-USER toolman
 # one of the two
 # 1. using conda run
 # Make RUN commands use the new environment:
 # SHELL ["conda", "run", "-n", "myenv", "/bin/bash", "-c"]
 # 2. using source
-RUN /bin/bash -c "source /opt/conda/bin/activate"
-# launching
+COPY entrypoint.sh /entrypoint.sh
+RUN chmod +x /entrypoint.sh
+ENTRYPOINT ["/entrypoint.sh"]
+USER toolman
