--- a/conda_envs/Dockerfile
+++ b/conda_envs/Dockerfile
@@ -1,62 +1,57 @@
 # syntax=docker/dockerfile:1
 
-FROM continuumio/miniconda3:latest
+FROM quay.io/jupyter/datascience-notebook:latest
 
-ARG USER_ID
-ARG GROUP_ID
-RUN addgroup --gid $GROUP_ID toolman && \
-    adduser --disabled-password --gecos '' --uid $USER_ID --gid $GROUP_ID toolman && \
-    adduser root toolman && \
-    chown -R root:toolman /opt/conda && \
-    chmod -R g-w /opt/conda && \
-    chmod -R g+rX /opt/conda
-COPY .condarc /root/.condarc
-RUN conda clean -i; \
-    conda install -y -c conda-forge mamba
+# --- set base ML env ---
+USER root
 # prepare libs for open3d
 RUN apt-get update && apt-get install --no-install-recommends -y \
     libgl1 \
     libgomp1 \
     && rm -rf /var/lib/apt/lists/*
-# set jupyterlab
-RUN mamba create -y -n lab jupyterlab
-# --- set embryo env ---
-# set embryo env ML
-RUN mamba create -y -n embryo -c conda-forge \
-    numpy=1.23.1 pandas scikit-learn scipy umap-learn \
-    pyarrow h5py \
-    matplotlib seaborn plotly python-kaleido \
-    jupyter_client ipykernel ipywidgets
-# set embryo env bioinformatics
-RUN mamba install -y -n embryo -c conda-forge -c bioconda \
-    cooler=0.9.1 cooltools=0.5.4 scanpy scvelo \
-    anndata pysam pybedtools pybigwig loompy rmsd upsetplot
-# set embryo env 3D
-RUN conda run -n embryo pip install opencv-contrib-python-headless open3d
-# additional packages 1
-RUN mamba install -n embryo -y -c conda-forge openpyxl scikit-misc jupyter-dash --freeze-installed
-# RUN mamba install -y -n embryo -c conda-forge numpy=1.23.1
-# --- install embryo jupyter kernel ---
-RUN conda run -n embryo python -m ipykernel install --name=embryo --display-name="Python (embryo)"
-# --- set pymol env ---
-RUN mamba create -y -n pymol -c conda-forge pymol-open-source
+USER ${NB_UID}
+RUN mamba install --yes -c conda-forge -c plotly python-kaleido jupyter-dash \
+    cooler cooltools pymol-open-source scanpy scvelo anndata pysam pybedtools pybigwig loompy rmsd upsetplot && \
+    mamba clean --all -f -y && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}"
+RUN pip install --no-cache-dir opencv-contrib-python-headless open3d && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}"
+
 # --- set py2 env ---
-COPY dip-c.yaml /opt/conda/
-RUN mamba env create -n py2 -f /opt/conda/dip-c.yaml
+# Name your environment and choose the Python version
+ARG env_name=py2
+ARG py_ver=2.7.15
+COPY --chown=${NB_UID}:${NB_GID} conda_files/dip-c.yaml /tmp/
+RUN mamba env create -p "${CONDA_DIR}/envs/${env_name}" -f /tmp/dip-c.yaml && \
+    mamba clean --all -f -y
+# Create Python kernel and link it to jupyter
+RUN "${CONDA_DIR}/envs/${env_name}/bin/python" -m ipykernel install --user --name="${env_name}" && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}"
+# RUN "${CONDA_DIR}/envs/${env_name}/bin/pip" install --no-cache-dir \
+#     'flake8'
+
 # --- set bioR env ---
-RUN mamba create -n bioR -y -c conda-forge -c bioconda r-tidyverse r-seurat bioconductor-tradeseq bioconductor-slingshot bioconductor-rgreat r-irkernel bioconductor-glmGamPoi
-# --- install bioR jupyter kernel ---
-RUN mamba install -y -n bioR -c conda-forge jupyter_client --freeze-installed
-RUN conda run -n bioR R -e "IRkernel::installspec(name = 'bioR', user = FALSE, displayname = 'R (bioR)')"
-# --- configure jupyterlab ---
-# RUN mamba install -y -n lab -c conda-forge nodejs=16
-# RUN conda run -n lab jupyter labextension install jupyterlab-plotly
-COPY jupyter_entrypoint.sh /opt/conda/
-RUN chown toolman:toolman /opt/conda/jupyter_entrypoint.sh && \
-    chmod +x /opt/conda/jupyter_entrypoint.sh
-USER toolman
-WORKDIR /share/Data/ychi/notebook
-ENTRYPOINT ["/opt/conda/jupyter_entrypoint.sh"]
+ARG env_name=bioR
+ARG py_ver=3.8.8
+RUN mamba create --yes -p "${CONDA_DIR}/envs/${env_name}" \
+    python=${py_ver} \
+    'jupyter_client' \
+    'r-tydyverse' \
+    'r-seurat' \
+    'bioconductor-tradeseq' \
+    'bioconductor-slingshot' \
+    'bioconductor-rgreat' \
+    'r-irkernel' \
+    'bioconductor-glmGamPoi' \
+    && \
+    mamba clean --all -f -y
+# Create Python kernel and link it to jupyter
+RUN "${CONDA_DIR}/envs/${env_name}/bin/R" -e "IRkernel::installspec(name = 'bioR', user = TRUE, displayname = 'R (bioR)')" && \
+    fix-permissions "${CONDA_DIR}" && \
+    fix-permissions "/home/${NB_USER}"
 # TODO:
 # 1. make jupyter running in background
 # 2. a same docker can run jupyterlab and exec custom command, hack jupyter_entrypoint.sh
