--- a/light_conda/Dockerfile
+++ b/light_conda/Dockerfile
@@ -9,4 +9,5 @@ RUN apt-get update && apt-get install --no-install-recommends -y \
     libgl1 \
     libgomp1 \
     git less curl \
+    build-essential \
     && rm -rf /var/lib/apt/lists/*
